--- a/templates/account/contact.html
+++ b/templates/account/contact.html
@@ -26,13 +26,16 @@
         <a class="nav-link" href=" http://127.0.0.1:8000/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:8000/About">About Us</a>
+        <a class="nav-link" href="http://127.0.0.1:8000/about">About Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="http://127.0.0.1:8000/contact">Contact Us</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href="http://127.0.0.1:8000/">Sign Up</a>
+      <a class="nav-link" href="http://127.0.0.1:8000/signup">Sign Up</a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" href="http://127.0.0.1:8000/login">Login</a>
       </li>
     </ul>
 
@@ -51,5 +54,3 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-
