--- a/templates/account/home2.html
+++ b/templates/account/home2.html
@@ -53,3 +53,54 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+   <!--
+
+   footer code
+
+   -->
+
+
+    <footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 offset-1 col-sm-2">
+                <h5>Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col-7 col-sm-5">
+                <h5>Our Address</h5>
+                <address>
+                    Seth Jai Prakash Mukand Lal Institute Of Engineering And Technology<br>
+                    Radaur<br>
+                    Yamuna-nagar<br>
+                    <span class="fa fa-phone fa-lg"></span>: 91-1732-284195<br>
+                    <span class="fa fa-fax fa-lg"></span>: 8295905206<br>
+                    <span class="fa fa-envelope fa-lg"></span>: <a
+                        href="mailto:jmit.ac.in">jmit.ac.in</a>
+                </address>
+            </div>
+            <div class="col-12 col-sm-4 align-self-center">
+                <div class="text-center">
+                    <a class="btn btn-social-icon btn-google" href="http://google.com/+"><span
+                            class="fa fa-google-plus fa-lg"></span></a>
+                    <a class="btn btn-social-icon btn-facebook"
+                        href="http://www.facebook.com/profile.php?id="><span
+                            class="fa fa-facebook fa-lg"></span></a>
+                    <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><span
+                            class="fa fa-linkedin fa-lg"></span></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><span
+                            class="fa fa-twitter fa-lg"></span></a>
+                    <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><span
+                            class="fa fa-youtube fa-lg"></span>
+                        <a class="btn btn-social-icon" href="mailto:"><span
+                                class="fa fa-envelope-o fa-lg"></span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
