--- a/templates/account/msg.html
+++ b/templates/account/msg.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Error Message</title>
-<body>
+{% load staticfiles%}
+{% include 'account/header.html' %}
 <h2> The Username OR Email is already taken try another one.  </h2>
 <h2> Thankyou</h2>
-<p>
-    <pre> {{msg}}</pre>
-
-
-</p>
-</body>
-</html>
+<br> <br> <br><br> <br> <br><br> <br> <br><br> <br> <br>
+    {% include 'account/footer.html' %}
