Updated for version 3.0.5

--- a/templates/account/about.html
+++ b/templates/account/about.html
@@ -1,4 +1,4 @@
-{%load staticfiles%}
+{%load static %}
 {% include 'account/header.html' %}
 
 <h3>welcome to about  page </h3><br> <br> <br><br> <br> <br><br> <br> <br><br> <br> <br>
