--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,7 +8,7 @@
     <title>System Login</title>
 
    <!-- css of the site -->
-    {% load staticfiles%}
+    {% load static%}
 
       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}">
 
