--- a/templates/account/contact.html
+++ b/templates/account/contact.html
@@ -1,4 +1,4 @@
-{%load staticfiles%}
+{%load static%}
 {% include 'account/header.html' %}
 
       <h3> welcome to contact page </h3><br> <br> <br><br> <br> <br><br> <br> <br><br> <br> <br>
