--- a/templates/account/home.html
+++ b/templates/account/home.html
@@ -1,5 +1,5 @@
 
-{% load staticfiles%}
+{% load static%}
 {% include 'account/header.html' %}
 <h2>welcome to 1st page </h2><br> <br> <br><br> <br> <br><br> <br> <br><br> <br> <br>
 {% include 'account/footer.html' %}
