--- a/templates/account/msg.html
+++ b/templates/account/msg.html
@@ -1,4 +1,4 @@
-{% load staticfiles%}
+{% load static%}
 {% include 'account/header.html' %}
 <h2> The Username OR Email is already taken try another one.  </h2>
 <h2> Thankyou</h2>
