--- a/templates/account/msg.html
+++ b/templates/account/msg.html
@@ -1,6 +1,6 @@
-{% load staticfiles%}
+{% load static%}
 {% include 'account/header.html' %}
-<h2> The Username OR Email is already taken try another one.  </h2>
-<h2> Thankyou</h2>
+<h2>{{msg}}</h2>
+<h3> Thankyou</h3>
 <br> <br> <br><br> <br> <br><br> <br> <br><br> <br> <br>
     {% include 'account/footer.html' %}
