--- a/templates/account/tut_vedio.html
+++ b/templates/account/tut_vedio.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% include 'account/header.html' %}
+
 <h3>welcome to tutorial vedio</h3>
 
-</body>
-</html>
 
-{% include"account/footer.html"%}
+
+{% include 'account/footer.html' %}
